@@ -21,29 +21,21 @@ end_package
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|math
 operator|.
-name|commons
-operator|.
-name|logging
-operator|.
-name|Log
+name|BigDecimal
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|apache
+name|math
 operator|.
-name|commons
-operator|.
-name|logging
-operator|.
-name|LogFactory
+name|RoundingMode
 import|;
 end_import
 
@@ -72,23 +64,6 @@ name|UDFRound
 implements|implements
 name|UDF
 block|{
-specifier|private
-specifier|static
-name|Log
-name|LOG
-init|=
-name|LogFactory
-operator|.
-name|getLog
-argument_list|(
-name|UDFRound
-operator|.
-name|class
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-decl_stmt|;
 specifier|public
 name|UDFRound
 parameter_list|()
@@ -98,36 +73,78 @@ name|Long
 name|evaluate
 parameter_list|(
 name|Double
+name|n
+parameter_list|)
+block|{
+if|if
+condition|(
+name|n
+operator|==
+literal|null
+condition|)
+return|return
+literal|null
+return|;
+return|return
+name|evaluate
+argument_list|(
+name|n
+argument_list|,
+literal|0
+argument_list|)
+operator|.
+name|longValue
+argument_list|()
+return|;
+block|}
+specifier|public
+name|Double
+name|evaluate
+parameter_list|(
+name|Double
+name|n
+parameter_list|,
+name|Integer
 name|i
 parameter_list|)
 block|{
 if|if
 condition|(
+operator|(
+name|n
+operator|==
+literal|null
+operator|)
+operator|||
+operator|(
 name|i
 operator|==
 literal|null
+operator|)
 condition|)
-block|{
 return|return
 literal|null
 return|;
-block|}
-else|else
-block|{
 return|return
-name|Long
+name|BigDecimal
 operator|.
 name|valueOf
 argument_list|(
-name|Math
+name|n
+argument_list|)
 operator|.
-name|round
+name|setScale
 argument_list|(
 name|i
+argument_list|,
+name|RoundingMode
+operator|.
+name|HALF_UP
 argument_list|)
-argument_list|)
+operator|.
+name|doubleValue
+argument_list|()
 return|;
-block|}
 block|}
 block|}
 end_class
